gateway/1.9/modules/ROOT/pages/policies-included-mcp-support.adoc
= MCP Support Policy
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images
:keywords: api gateway, flex gateway, gateway, policy

[width="100%", cols="5,15"]
|===
>s| Policy Name | MCP Support
>s|Summary | Adds MCP support to a Flex Gateway MCP server instance. This policy is required for your MCP server instance to function properly.
>s|Category | MCP
>s|First Flex Gateway version available | v1.9.3
>s| Returned Status Codes | No return codes exist for this policy.
|===

== Summary

The MCP Support Policy configures Flex Gateway to support MCP server instances. You must apply this policy to all MCP server instances for the instance to function properly. If you don't apply this policy, Flex Gateway might throw a runtime error.

There are no configuration parameters for this policy.

NOTE: This policy must come first in policy order. If this policy doesn't come first, Flex Gateway might throw a runtime error.

include::partial$policy-title-headers.adoc[tag=configFileTitleOnly]

The MCP Support policy isn't supported in Local Mode.
